fixed box align

--- a/css/section0.css
+++ b/css/section0.css
@@ -47,6 +47,6 @@
     
 }
 
-.section0 button {
+.section0 a {
     z-index: 1;
 }
