--- a/css/section3.css
+++ b/css/section3.css
@@ -32,7 +32,11 @@
     z-index: 1;
     text-align: center;
     background-color: white;
-    border: 2px solid;
-    max-width: 400px;
+    border-left: 2px solid rgba(0, 0, 0, .6);
+    border-bottom: 2px solid rgba(0, 0, 0, .6);
+    max-width: 430px;
     margin-right: 30px;
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-size: 1.1em;
 }
