--- a/css/section7.css
+++ b/css/section7.css
@@ -3,6 +3,7 @@
     position: relative;
     overflow: hidden;
     padding-top: 50px;
+    font-size: 1.2em;
 }
 
 .section7 .back {
